WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
70970
[Qt] Failure to build when QT_NO_MENU defined
https://bugs.webkit.org/show_bug.cgi?id=70970
Summary
[Qt] Failure to build when QT_NO_MENU defined
Helder Correia
Reported
2011-10-26 15:11:04 PDT
A preprocessor guard is necessary for static function iterateContextMenu(QMenu* menu) in DumpRenderTreeSupportQt.cpp (patch coming).
Attachments
Patch
(1.38 KB, patch)
2011-10-26 15:50 PDT
,
Helder Correia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Helder Correia
Comment 1
2011-10-26 15:50:33 PDT
Created
attachment 112609
[details]
Patch
Andreas Kling
Comment 2
2011-10-27 04:58:49 PDT
Comment on
attachment 112609
[details]
Patch rs=me
WebKit Review Bot
Comment 3
2011-10-27 12:53:04 PDT
Comment on
attachment 112609
[details]
Patch Clearing flags on attachment: 112609 Committed
r98619
: <
http://trac.webkit.org/changeset/98619
>
WebKit Review Bot
Comment 4
2011-10-27 12:53:07 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug