[Qt] Failure to build when QT_NO_MENU defined https://bugs.webkit.org/show_bug.cgi?id=70970

Patch by Helder Correia <helder.correia@palm.com> on 2011-10-27
Reviewed by Andreas Kling.

iterateContextMenu() must be wrapped around #ifndef QT_NO_MENU.

Build fix, no new tests.

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@98619 bbb929c8-8fbe-4397-9dbb-9b2b20218538