third_party/WebKit/Source/WebKit/qt/WebCoreSupport/DumpRenderTreeSupportQt.cpp
@@ -1034,6 +1034,7 @@ void DumpRenderTreeSupportQt::setInteractiveFormValidationEnabled(QWebPage* page
         corePage->settings()->setInteractiveFormValidationEnabled(enable);
 }
 
+#ifndef QT_NO_MENU
 static QStringList iterateContextMenu(QMenu* menu)
 {
     if (!menu)
@@ -1051,6 +1052,7 @@ static QStringList iterateContextMenu(QMenu* menu)
     }
     return items;
 }
+#endif
 
 QStringList DumpRenderTreeSupportQt::contextMenu(QWebPage* page)
 {
